--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,76 @@
 *{
     font-family: bahnschrift;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.left {
+    position: absolute;
+    left: 0;
+    background: #005CB4;
+    width: 70%;
+    height: 100%;
+    z-index: -1;
+}
+
+.left h1 {
+    color: #ffff;
+    left: 10%;
+    top: 20%;
+    position: relative;
+    font-size: 60px;
+}
+
+.left p {
+    color: #000000;
+    width: 510px;
+    height: 200px;
+    position: relative;
+    left: 10%;
+    top: 34%;
+}
+
+.left .content-button {
+    width: 400px;
+    height: 100px;
+    left: 8%;
+    top: 22%;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.content-button button {
+    width: 200px;
+    height: 50px;
+    margin: 20px;
+    position: relative;
+    border: 3px solid #ffffff;
+    color: #ffffff;
+    background: transparent;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.content-button button:nth-child(1) {
+    background: #ffffff;
+    color: #005CB4;
+}
+
+button:hover {
+    background-color: #ffff;
+    color: #005CB4;
+    transition: 0.2s ease;
 }
