--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
     text-decoration: none;
 }
 
+@font-face {
+    font-family: "Brush";
+    src: url("../storage/fonts/PEPSI_pl.ttf");
+}
+
 .container {
     width: 100%;
     height: 100vh;
@@ -38,7 +43,7 @@
     height: 200px;
     position: relative;
     left: 10%;
-    top: 34%;
+    top: 30%;
 }
 
 .left .content-button {
@@ -73,4 +78,47 @@ button:hover {
     background-color: #ffff;
     color: #005CB4;
     transition: 0.2s ease;
+}
+
+.right {
+    width: 30%;
+    height: 100%;
+    right: 0;
+    position: absolute;
+}
+
+.header {
+    width: 100%;
+    height: 100px;
+    top: 0;
+    position: absolute;
+}
+
+.header #logo {
+    color: white;
+    font-family: "Brush";
+    position: relative;
+    margin: 30px 130px;
+    font-weight: bold;
+}
+
+.header .menu {
+    width: 500px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    left: 35%;
+    position: absolute;
+    top: 0;
+}
+
+.menu a {
+    margin: 25px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    position: relative;
+    transition: 0.3s ease;
+    color: white;
 }
