--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 *{
-    font-family: bahnschrift;
-    padding: 0;
+    font-family: "Bahnschrift";
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+}
+
+@font-face {
+    font-family: "Bahnschrift";
+    src: url("../storage/fonts/BAHNSCHRIFT.TTF");
 }
 
 @font-face {
@@ -32,13 +36,13 @@
 .left h1 {
     color: #ffff;
     left: 10%;
-    top: 20%;
+    top: 25%;
     position: relative;
     font-size: 60px;
 }
 
 .left p {
-    color: #000000;
+    color: #ffffff;
     width: 510px;
     height: 200px;
     position: relative;
@@ -50,7 +54,7 @@
     width: 400px;
     height: 100px;
     left: 8%;
-    top: 22%;
+    top: 25%;
     position: relative;
     justify-content: center;
     align-items: center;
@@ -121,4 +125,57 @@ button:hover {
     position: relative;
     transition: 0.3s ease;
     color: white;
+}
+
+.menu a:hover {
+    -webkit-text-stroke-width: 0.6px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
+    transition: 0.2s ease;
+}
+
+.menu a:nth-child(1) {
+    -webkit-text-stroke-width: 0.6px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);;
+}
+
+.menu a::after {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: 0;
+    background: white;
+    transition: 0.3s ease;
+}
+
+.menu a:hover::after {
+    width: 100%;
+    transition: 0.3s ease;
+}
+
+img {
+    height: 600px;
+    right: 10%;
+    top: 17%;
+    position: absolute;
+}
+
+.media-shop {
+    position: absolute;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    display: flex;
+    top: 0;
+}
+
+.media-shop img {
+    position: inherit;
+    top: 25%;
+    width: 40px;
+    height: 40px;
+    margin: 2px;
 }
